--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-  background: #fff3c4;
+  background: #fff;
   color: #666666;
 }
 
@@ -25,7 +25,7 @@ a {
 }
 
 a:hover {
-  color: #e3a936;
+  color: #4a4a4a;
 }
 
 .box {
