--- a/asset/scss/initial.scss
+++ b/asset/scss/initial.scss
@@ -1,27 +1,30 @@
 /*initial css*/
+@font-face {
+    font-family: 'GmarketSansMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 html,body{
   height: 100%;
 }
+*{ margin: 0; padding: 0; box-sizing: border-box;}
 
-body{
-  background: $layoutBg;
-  color: $fontColorBasic;
-}
+body{ font-family: 'GmarketSansMedium', 'Montserrat', sans-serif; color: $fontColorBasic; }
 
 html,body,ul,li,h1,h2,h3,h4,h5,h6{
   margin: 0;
   padding: 0;
 }
 
-li{
-  list-style: none;
-}
+ul,ol{ list-style: none; }
 
-a{
-  text-decoration: none;
-  color: $fontColorPrimary;
-  transition: .5s;
-  &:hover{
-    color: $fontColorHover;
-  }
-}
+input::-ms-clear { display: none; }
+
+input:focus { outline: none; }
+
+button:focus { outline: none; }
+
+a{text-decoration: none; color: $fontColorBasic;}
