--- a/asset/scss/main.scss
+++ b/asset/scss/main.scss
@@ -1,6 +1,9 @@
 //메인페이지
 .mainbanner{
-  height: 550px;
-  background: url('../img/main_banner.jpg') no-repeat;
-  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+    video{
+      width: 100%;
+    }
 }
