--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -2,11 +2,10 @@
 
 //scss 파일 분화
 @import "var.scss";//공통 변수
-@import "mixin.scss";//공통 mixin
 @import "initial.scss";// css 초기화
 @import "common.scss";// 공통 요소
 @import "component.scss";// 공통 컴포넌트
-@import "layout.scss";// 공통 레이아웃
+@import "nav.scss";// 공통 레이아웃
 
 //페이지 분화
 @import "main.scss";// 메인페이지
