--- a/asset/scss/var.scss
+++ b/asset/scss/var.scss
@@ -1,13 +1,15 @@
 //변수처리
 
 //size width
-$siteWidth: 100%;
-
+$width: 1440px;
 //text size
 $fontSize: 16px;
 $fontSizeNormal: 18px;
 $fontSizeMid: 30px;
 $fontSizeSBig: 56px;
+
+// nav font size
+$navMainsize: 18px;
 
 //background color
 $layoutBg: #fff;
@@ -15,3 +17,7 @@ $layoutBg: #fff;
 //font color
 $fontColorBasic: #666666;
 $fontColorHover: #4a4a4a;
+$fontMain: #333;
+
+//border color
+$borderColorPrimary: #f1f1f1;
