--- a/asset/scss/main.scss
+++ b/asset/scss/main.scss
@@ -1,9 +1,156 @@
 //메인페이지
 .mainbanner{
+  position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  .main-banner{
+    height: 100%;
     video{
       width: 100%;
+      height: auto;
     }
+  }
+}
+
+.container{
+  width: 100%;
+  margin: 0 auto;
+  .content-wrap{
+    width: $width;
+    margin: 0 auto;
+    section{
+      width: 100%;
+      height: 100vh;
+    }
+    .content1{
+      width: 100%;
+      height: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      background: url('../img/main/bg_system_sec.jpg');
+      background-repeat: no-repeat;
+      background-position: right;
+      background-size: contain;
+      .content-text{
+        width: 50%;
+        span{
+          display: block;
+          margin-bottom: 30px;
+          font-size: $fontSizeMid;
+          color: #555;
+          font-weight: 500;
+        }
+        h2{
+          font-size: $fontSizeSBig;
+          color: #222;
+          font-weight: bold;
+          margin-bottom: 30px;
+        }
+        p{
+          font-size: $fontSizeNormal;
+          color: #666;
+          line-height: 30px;
+        }
+      }
+      .content-img{
+        width: 50%;
+        height: auto;
+      }
+    }//1
+    .content2{
+      width: 100%;
+      height: 100%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      background: url('../img/main/bg_product_sec.jpg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: auto 80%;
+      .content-img{
+        width: 55%;
+      }
+      .content-text{
+        width: 45%;
+        span{
+          display: block;
+          margin-bottom: 30px;
+          font-size: $fontSizeMid;
+          color: #555;
+          font-weight: 500;
+        }
+        h2{
+          font-size: $fontSizeSBig;
+          color: #222;
+          font-weight: bold;
+          margin-bottom: 30px;
+        }
+        p{
+          font-size: $fontSizeNormal;
+          color: #666;
+          line-height: 30px;
+          margin-bottom: 20px;
+          &:last-child{
+            padding-bottom: 150px;
+          }
+        }
+      }
+    }//2
+    .content3{
+      width: 100%;
+      height: 100%;
+      background: url('../img/main/bg_service_sec.jpg');
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: contain;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      justify-content: space-around;
+      .content-text1{
+        width: 75%;
+        margin: 0 auto;
+        span{
+          display: block;
+          margin-bottom: 30px;
+          font-size: $fontSizeMid;
+          color: #555;
+          font-weight: 500;
+        }
+        h2{
+          font-size: $fontSizeSBig;
+          color: #222;
+          font-weight: bold;
+          padding-bottom: 50px;
+          margin-bottom: 30px;
+        }
+      }
+      .content-text2{
+        width: 75%;
+        margin: 0 auto;
+        p{
+          font-size: $fontSizeNormal;
+          color: #666;
+          line-height: 35px;
+        }
+      }
+    }
+  }
 }
