--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -6,6 +6,7 @@
 @import "common.scss";// 공통 요소
 @import "component.scss";// 공통 컴포넌트
 @import "nav.scss";// 공통 레이아웃
+@import "footer.scss";
 
 //페이지 분화
 @import "main.scss";// 메인페이지
