--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -55,9 +55,11 @@ a {
 }
 
 #wrap #header {
-  position: relative;
+  position: fixed;
+  width: 100%;
   height: 90px;
   z-index: 100;
+  background: rgba(255, 255, 255, 0.9);
   box-shadow: 3px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -131,8 +133,8 @@ a {
 }
 
 #wrap #header #top_nav ul li .submenu li a {
-  line-height: 40px;
-  height: 40px;
+  line-height: 50px;
+  height: 50px;
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -142,20 +144,237 @@ a {
 }
 
 #wrap #header #top_nav ul li .submenu li:hover {
-  background: -webkit-linear-gradient(128deg, #73e4ff, #dc80f9);
-  background: linear-gradient(128deg, #73e4ff, #dc80f9);
+  background: -webkit-linear-gradient(152deg, #d0e6f9, #f6e5ff);
+  background: linear-gradient(152deg, #d0e6f9, #f6e5ff);
 }
 
 #wrap #header #top_nav ul li .submenu li:hover a {
   color: white;
 }
 
+#footer {
+  width: 100%;
+  height: 400px;
+  background: -webkit-linear-gradient(152deg, #d0e6f9, #f6e5ff);
+  background: linear-gradient(152deg, #d0e6f9, #f6e5ff);
+}
+
+#footer .footer-wrap {
+  width: 1440px;
+  margin: 0 auto;
+  padding: 60px;
+}
+
+#footer .footer-wrap .footer-logo h6 {
+  padding: 15px 0;
+  color: #4a4a4a;
+  font-size: 22px;
+}
+
+#footer .footer-wrap .container .foot-info {
+  line-height: 30px;
+  font-size: 14px;
+}
+
+#footer .footer-wrap .foot-bottom {
+  display: flex;
+  justify-content: center;
+  height: 30px;
+  line-height: 30px;
+}
+
+#footer .footer-wrap .foot-bottom nav ul {
+  display: flex;
+}
+
+#footer .footer-wrap .foot-bottom nav ul li {
+  font-size: 14px;
+  padding: 5px 25px;
+}
+
+#footer .footer-wrap .foot-bottom nav ul li:first-child {
+  padding-left: 0;
+}
+
+#footer .footer-wrap .foot-bottom .search {
+  padding-left: 25px;
+}
+
 .mainbanner {
+  position: relative;
   width: 100%;
   height: 100vh;
   overflow: hidden;
 }
 
-.mainbanner video {
+.mainbanner .main-banner {
+  height: 100%;
+}
+
+.mainbanner .main-banner video {
   width: 100%;
+  height: auto;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.container .content-wrap {
+  width: 1440px;
+  margin: 0 auto;
+}
+
+.container .content-wrap section {
+  width: 100%;
+  height: 100vh;
+}
+
+.container .content-wrap .content1 {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: url("../img/main/bg_system_sec.jpg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+}
+
+.container .content-wrap .content1 .content-text {
+  width: 50%;
+}
+
+.container .content-wrap .content1 .content-text span {
+  display: block;
+  margin-bottom: 30px;
+  font-size: 30px;
+  color: #555;
+  font-weight: 500;
+}
+
+.container .content-wrap .content1 .content-text h2 {
+  font-size: 56px;
+  color: #222;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.container .content-wrap .content1 .content-text p {
+  font-size: 18px;
+  color: #666;
+  line-height: 30px;
+}
+
+.container .content-wrap .content1 .content-img {
+  width: 50%;
+  height: auto;
+}
+
+.container .content-wrap .content2 {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: url("../img/main/bg_product_sec.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto 80%;
+}
+
+.container .content-wrap .content2 .content-img {
+  width: 55%;
+}
+
+.container .content-wrap .content2 .content-text {
+  width: 45%;
+}
+
+.container .content-wrap .content2 .content-text span {
+  display: block;
+  margin-bottom: 30px;
+  font-size: 30px;
+  color: #555;
+  font-weight: 500;
+}
+
+.container .content-wrap .content2 .content-text h2 {
+  font-size: 56px;
+  color: #222;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.container .content-wrap .content2 .content-text p {
+  font-size: 18px;
+  color: #666;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+
+.container .content-wrap .content2 .content-text p:last-child {
+  padding-bottom: 150px;
+}
+
+.container .content-wrap .content3 {
+  width: 100%;
+  height: 100%;
+  background: url("../img/main/bg_service_sec.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.container .content-wrap .content3 .content-text1 {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.container .content-wrap .content3 .content-text1 span {
+  display: block;
+  margin-bottom: 30px;
+  font-size: 30px;
+  color: #555;
+  font-weight: 500;
+}
+
+.container .content-wrap .content3 .content-text1 h2 {
+  font-size: 56px;
+  color: #222;
+  font-weight: bold;
+  padding-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+.container .content-wrap .content3 .content-text2 {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.container .content-wrap .content3 .content-text2 p {
+  font-size: 18px;
+  color: #666;
+  line-height: 35px;
 }
