--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -5,7 +5,7 @@
 @import "initial.scss";// css 초기화
 @import "common.scss";// 공통 요소
 @import "component.scss";// 공통 컴포넌트
-@import "nav.scss";// 공통 레이아웃
+@import "nav.scss";// 네비게이션
 @import "footer.scss";
 
 //페이지 분화
