서브페이지 작업

--- a/asset/css/myinitial.css
+++ b/asset/css/myinitial.css
@@ -231,7 +231,7 @@ input, textarea, button {-webkit-appearance:none; -moz-appearance:none; appearan
 input, textarea, button, select {-webkit-border-radius:0; -moz-border-radius:0; -o-border-radius:0; border-radius:0;}
 
 /* 폰트 컬러 */
-.c-black{color:#000000;}
+.nav-color{color:#6081C8;}
 .c-white{color:#ffffff;}
 .c-3{color:#6e73dd;}
 .c-4{color:#ff194a;}
