--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -388,3 +388,16 @@ a {
   color: #666;
   line-height: 35px;
 }
+
+.company {
+  width: 100%;
+}
+
+.company .company-banner {
+  width: 100%;
+  height: 670px;
+  position: relative;
+  background: url("../img/company/bg_company1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
