--- a/asset/scss/company.scss
+++ b/asset/scss/company.scss
@@ -7,5 +7,40 @@
     background: url('../img/company/bg_company1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    .company-text{
+      width: $width;
+      height: 100%;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      h1{
+        color: white;
+        margin-bottom: 30px;
+        font-size: 56px;
+      }
+      span{
+        display: block;
+        width: 70px;
+        height: 2px;
+        background: #fff;
+        opacity: 0.6;
+        margin-bottom: 35px;
+      }
+      p{
+        color: white;
+        font-size: 22px;
+      }
+    }
+  }
+}
+
+.com-content{
+  width: 100%;
+  .content{
+    width: $width;
+    height: 100vh;
+    margin: 0 auto;
+    padding-top: 100px;
   }
 }
