--- a/asset/css/company.css
+++ b/asset/css/company.css
@@ -10,3 +10,12 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.company .company-banner .company-text {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
