--- a/asset/scss/initial.scss
+++ b/asset/scss/initial.scss
@@ -1,7 +1,14 @@
 /*initial css*/
+
 @font-face {
     font-family: 'GmarketSansMedium';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'GmarketSansLight';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -28,3 +35,5 @@ input:focus { outline: none; }
 button:focus { outline: none; }
 
 a{text-decoration: none; color: $fontColorBasic;}
+
+.nav{color: #6081C8;}
