--- a/asset/scss/initial.scss
+++ b/asset/scss/initial.scss
@@ -17,7 +17,7 @@
 html,body{
   height: 100%;
 }
-*{ margin: 0; padding: 0; box-sizing: border-box;}
+*{ margin: 0; padding: 0; box-sizing: border-box; word-break: keep-all;}
 
 body{ font-family: 'GmarketSansMedium', 'Montserrat', sans-serif; color: $fontColorBasic; }
 
