--- a/asset/scss/nav.scss
+++ b/asset/scss/nav.scss
@@ -40,7 +40,7 @@
             color: $fontMain;
             font-size: $navMainsize;
             &:hover{
-              color: #6081C8;
+              color: $navColor;
             }
           }
           &:hover{
