--- a/asset/scss/main.scss
+++ b/asset/scss/main.scss
@@ -86,6 +86,7 @@
       }
       .content-text{
         width: 45%;
+        margin-bottom: 60px;
         span{
           display: block;
           margin-bottom: 30px;
